K8S/monitoring-ingress-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.local
      http:
        paths:
          - path: /               # Đã thêm dấu gạch ngang
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.local         # Đã sửa lỗi chính tả
      http:
        paths:
          - path: /               # Đã thêm dấu gạch ngang
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.local
      http:
        paths:
          - path: /               # Đã thêm dấu gạch ngang
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-alertmanager
                port:
                  number: 9093    # Chỉ giữ lại 1 port duy nhất
